cmake_minimum_required(VERSION 3.28)
project(C__21days)

set(CMAKE_CXX_STANDARD 17)

add_executable(C__21days main.cpp
        day1.cpp
        2_0.cpp
        2_0.cpp
        2_1FUNC.cpp
        2_2.cpp
        3_0.cpp
        3_1.cpp
        3_2.cpp
        3_3.cpp
        3_4.cpp
        3_5.cpp
        4_0.cpp
        4_1.cpp
        4_2.cpp
        4_3.cpp
        4_4.cpp
        4_5.cpp
        4_6.cpp
        4_7.cpp
        4_8.cpp
        4_9.cpp
        4_10.cpp
        4_11.cpp)
